<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mmm.myapplication.Activity2"
    android:weightSum="1">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textA2" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radiogr">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rb1"
            android:id="@+id/rb1"
            android:checked="true"
            android:onClick="onRadioClick" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rb2"
            android:id="@+id/rb2"
            android:onClick="onRadioClick" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rb3"
            android:id="@+id/rb3"
            android:onClick="onRadioClick" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rb4"
            android:id="@+id/rb4"
            android:onClick="onRadioClick" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rb5"
            android:id="@+id/rb5"
            android:onClick="onRadioClick" />

    </RadioGroup>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Переключатель"
        android:id="@+id/switch1"
        android:checked="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/linearLayout1"
        android:weightSum="1">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time"
            android:id="@+id/button"
            android:onClick="onClick"
            android:layout_gravity="top" />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date"
            android:id="@+id/button2"
            android:layout_gravity="top"
            android:onClick="onClick" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="Add"
            android:id="@+id/butAdd"
            android:hint="Добавить в базу"
            android:onClick="onClick"
            android:layout_weight="0.25" />

    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:max="100"
        android:progress="50" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:weightSum="1">

        <TextView
            android:layout_width="27dp"
            android:layout_height="32dp"
            android:text="@string/tvId"
            android:id="@+id/tvID"
            android:singleLine="false" />

        <EditText
            android:layout_width="39dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:inputType="number" />

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/butGet"
            android:id="@+id/butGet"
            android:hint="@string/hint_butGet"
            android:onClick="onClick"
            android:layout_gravity="top" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butDel"
            android:id="@+id/butDel"
            android:onClick="onClick"
            android:layout_gravity="top" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butClear"
            android:id="@+id/butClear"
            android:onClick="onClick"
            android:layout_gravity="top" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_bottom_ok"
            android:id="@+id/button_ok"
            android:onClick="onClick"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_bottom_concel"
            android:id="@+id/button_concel"
            android:onClick="onClick"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
